added conference style file

--- a/paper/fraiche.tex
+++ b/paper/fraiche.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper]{article}  
+\documentclass[a4paper]{acm_proc_article-sp}  
 \usepackage{microtype}
 \usepackage{mathpazo}
 \begin{document}
